# Banglish-Dictionary

./: .gitignore  Banglish_Dictionary.py  MANIFEST.in  README.md  banglish_tui.py  pyproject.toml
.github/workflows/: snap.yml
banglish_dictionary/: __init__.py  dictionary_data.json  tui.py
snap/: snapcraft.yaml
