[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "banglish-dictionary-tui"
version = "1.0.1"
description = "A TUI-based dictionary for Banglish to English translations."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "textual",
    "rich"
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
banglish-dict = "banglish_dictionary:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["banglish_dictionary*"] # Only include your code
exclude = ["snap*"]                # Tell it to ignore the snap folder!